# POS_pong

./: CMakeLists.txt  Server.cpp
Klient/: CMakeLists.txt  main.cpp
Klient/Headers/: Ball.h  GameState.h
Server/: CMakeLists.txt  GameState.h
game/: Game.cpp  Game.h  GameState.h  Player.cpp  Player.h  Position.cpp  Position.h  main.cpp
props/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  Playground.h
sockets/: Client.cpp  Server.cpp
